--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AppActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".AppActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="24dp"
+            android:textColor="@color/white"
+            android:text="Remainder" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end"
+            >
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:tint="@color/white"
+                android:paddingLeft="15dp"
+                android:src="@drawable/ic_search" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:tint="@color/white"
+                android:paddingLeft="15dp"
+                android:src="@drawable/ic_sort" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:tint="@color/white"
+                android:paddingLeft="8dp"
+                android:maxHeight="10dp"
+                android:src="@drawable/ic_menu" />
+
+        </LinearLayout>
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <androidx.fragment.app.FragmentContainerView
