--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,21 @@
         android:background="@color/primary">
 
         <TextView
+            android:id="@+id/appName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="24dp"
+            android:textSize="24sp"
             android:textColor="@color/white"
             android:text="Remainder" />
 
+        <EditText
+            android:id="@+id/searchBar"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:hint="search..."
+            android:maxLines="1"
+            android:visibility="gone"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:tint="@color/white"
+                android:id="@+id/searchIcon"
                 android:paddingLeft="15dp"
                 android:src="@drawable/ic_search" />
 
