--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="primary">#FF0f9bba</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#B3AEAE</color>
+    <color name="colorAccent">#FFFFFFFF</color>
 </resources>
