[Nandha] Add AppBar using compose separately for each fragment

--- a/app/src/main/res/layout/fragment_all_remainder.xml
+++ b/app/src/main/res/layout/fragment_all_remainder.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.AllRemainderFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="all remainder fragment" />
+        android:layout_height="wrap_content"
+        />
 
 </FrameLayout>
