--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,10 +17,18 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_homeFragment_to_addNewTaskFragment"
+            app:destination="@id/addNewTaskFragment" />
     </fragment>
     <fragment
         android:id="@+id/allRemainderFragment"
         android:name="com.tw.remainder.fragments.AllRemainderFragment"
         android:label="All Remainder"
         tools:layout="@layout/fragment_all_remainder" />
+    <fragment
+        android:id="@+id/addNewTaskFragment"
+        android:name="com.tw.remainder.fragments.AddNewTaskFragment"
+        android:label="fragment_add_new_task"
+        tools:layout="@layout/fragment_add_new_task" />
 </navigation>
