--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.HomeFragment">
     <androidx.compose.ui.platform.ComposeView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/appBar"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="30dp"
             android:layout_weight="1"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -25,12 +26,17 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add"
             android:layout_margin="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/addTaskLayout"
+            app:layout_constraintEnd_toEndOf="parent"
             android:backgroundTint="@color/primary"
             android:layout_gravity="end|bottom"/>
         <LinearLayout
+            android:id="@+id/addTaskLayout"
             android:layout_width="match_parent"
             android:background="@color/primary"
             android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content">
         <EditText
             android:layout_width="wrap_content"
@@ -50,6 +56,4 @@
                 />
         </LinearLayout>
 
-    </LinearLayout>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
