--- a/app/src/main/res/layout/fragment_task_holder.xml
+++ b/app/src/main/res/layout/fragment_task_holder.xml
@@ -2,8 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="20dp"
+    android:layout_margin="10dp"
     android:padding="10dp"
+    android:background="@drawable/task_shape"
     android:layout_height="wrap_content">
 
     <CheckBox
@@ -11,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="2dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginLeft="5dp"
+        android:layout_marginStart="5dp"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
 
@@ -19,6 +20,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:tooltipText="Title"
         app:layout_constraintStart_toEndOf="@+id/checkbox"
         android:textColor="@color/black"
@@ -28,6 +30,7 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title"/>
 
