[Nandha] Add UI to add task fragment

--- a/app/src/main/res/drawable/ic_close.xml
+++ b/app/src/main/res/drawable/ic_close.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="40">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M4.208,31.292v-4.334h11.584v4.334ZM4.208,22.167v-4.334h21.584v4.334ZM4.208,13.042L4.208,8.667h31.584v4.375Z"/>
+      android:pathData="m10.458,32.583 l-3.041,-3.041L16.958,20l-9.541,-9.542 3.041,-3.041L20,16.958l9.542,-9.541 3.041,3.041L23.042,20l9.541,9.542 -3.041,3.041L20,23.042Z"/>
 </vector>
