--- a/app/src/main/res/drawable/ic_menu.xml
+++ b/app/src/main/res/drawable/ic_menu.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M24,40q-1,0 -1.7,-0.7t-0.7,-1.7q0,-1 0.7,-1.7t1.7,-0.7q1,0 1.7,0.7t0.7,1.7q0,1 -0.7,1.7T24,40ZM24,26.4q-1,0 -1.7,-0.7t-0.7,-1.7q0,-1 0.7,-1.7t1.7,-0.7q1,0 1.7,0.7t0.7,1.7q0,1 -0.7,1.7t-1.7,0.7ZM24,12.8q-1,0 -1.7,-0.7t-0.7,-1.7q0,-1 0.7,-1.7T24,8q1,0 1.7,0.7t0.7,1.7q0,1 -0.7,1.7t-1.7,0.7Z"/>
+      android:pathData="M20.042,34.917q-1.25,0 -2.125,-0.875t-0.875,-2.084q0,-1.208 0.875,-2.104 0.875,-0.896 2.083,-0.896 1.25,0 2.104,0.896 0.854,0.896 0.854,2.104 0,1.209 -0.854,2.084t-2.062,0.875ZM20.042,22.958q-1.25,0 -2.125,-0.875T17.042,20q0,-1.25 0.875,-2.104 0.875,-0.854 2.083,-0.854 1.25,0 2.104,0.854 0.854,0.854 0.854,2.062 0,1.25 -0.854,2.125t-2.062,0.875ZM20.042,11.042q-1.25,0 -2.125,-0.875t-0.875,-2.125q0,-1.25 0.875,-2.125T20,5.042q1.25,0 2.104,0.875 0.854,0.875 0.854,2.125t-0.854,2.125q-0.854,0.875 -2.062,0.875Z"/>
 </vector>
