--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,7 +40,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content">
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:padding="10dp"
