--- a/app/src/main/res/drawable/ic_back_arrow.xml
+++ b/app/src/main/res/drawable/ic_back_arrow.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M24,40 L8,24 24,8l2.1,2.1 -12.4,12.4H40v3H13.7l12.4,12.4Z"/>
+      android:pathData="M20,33.833 L6.167,20 20,6.167l3.125,3.041 -8.583,8.625h19.291v4.334H14.542l8.583,8.583Z"/>
 </vector>
