--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+    android:width="40dp"
+    android:height="40dp"
+    android:viewportWidth="40"
+    android:viewportHeight="40">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M39.8,41.95 L26.65,28.8q-1.5,1.3 -3.5,2.025 -2,0.725 -4.25,0.725 -5.4,0 -9.15,-3.75T6,18.75q0,-5.3 3.75,-9.05 3.75,-3.75 9.1,-3.75 5.3,0 9.025,3.75 3.725,3.75 3.725,9.05 0,2.15 -0.7,4.15 -0.7,2 -2.1,3.75L42,39.75ZM18.85,28.55q4.05,0 6.9,-2.875Q28.6,22.8 28.6,18.75t-2.85,-6.925Q22.9,8.95 18.85,8.95q-4.1,0 -6.975,2.875T9,18.75q0,4.05 2.875,6.925t6.975,2.875Z"/>
+      android:pathData="M32.958,36.292 L21.875,25.25q-1.208,0.917 -2.833,1.438 -1.625,0.52 -3.542,0.52 -4.833,0 -8.208,-3.375t-3.375,-8.125q0,-4.791 3.375,-8.166t8.166,-3.375q4.792,0 8.146,3.375 3.354,3.375 3.354,8.166 0,1.875 -0.52,3.459 -0.521,1.583 -1.48,2.916l11.125,11.084ZM15.5,22.833q3,0 5.042,-2.083 2.041,-2.083 2.041,-5.042 0,-3 -2.062,-5.083 -2.063,-2.083 -5.021,-2.083 -3.042,0 -5.125,2.083t-2.083,5.083q0,2.959 2.083,5.042 2.083,2.083 5.125,2.083Z"/>
 </vector>
