--- a/app/src/main/res/layout/fragment_add_new_task.xml
+++ b/app/src/main/res/layout/fragment_add_new_task.xml
@@ -58,6 +58,7 @@
                 android:ems="10" />
 
             <ImageView
+                android:id="@+id/dateClearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:tint="@color/white"
@@ -80,20 +81,13 @@
                 android:ems="10" />
 
             <ImageView
+                android:id="@+id/timeClearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:tint="@color/white"
                 android:background="@drawable/circle_bg_shape"
                 android:src="@drawable/ic_close"/>
         </LinearLayout>
-
-        <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/modeLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/primary"
-            android:text="Repeat" />
 
     </LinearLayout>
 
