--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,6 +40,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="wrap_content">
         <EditText
+            android:id="@+id/quickTask"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -48,6 +49,7 @@
             android:textColorHint="@color/white"
             android:hint="Enter quick text here" />
             <ImageButton
+                android:id="@+id/quickTaskDone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/primary"
