Add logic to update the task

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,5 +30,9 @@
         android:id="@+id/addNewTaskFragment"
         android:name="com.tw.remainder.fragments.AddNewTaskFragment"
         android:label="fragment_add_new_task"
-        tools:layout="@layout/fragment_add_new_task" />
+        tools:layout="@layout/fragment_add_new_task">
+        <deepLink
+            android:id="@+id/deepLink"
+            app:uri="remainder://update/task/{id}" />
+    </fragment>
 </navigation>
