--- a/app/src/main/res/layout/fragment_add_new_task.xml
+++ b/app/src/main/res/layout/fragment_add_new_task.xml
@@ -1,102 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".fragments.AddNewTaskFragment">
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.tw.remainder.viewModels.AddNewTaskViewModel" />
+    </data>
 
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.compose.ui.platform.ComposeView
-        android:id = "@+id/appBar"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".fragments.AddNewTaskFragment">
 
-        <TextView
-            android:layout_marginTop="5dp"
-            android:id="@+id/titleLabel"
+        <!-- TODO: Update blank fragment layout -->
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/appBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/primary"
-            android:text="What is to be done?" />
-
-        <EditText
-            android:layout_marginTop="5dp"
-            android:id="@+id/titleEditTextView"
-            android:layout_marginStart="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10" />
-
-        <TextView
-            android:id="@+id/dueDateTimeLabel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/primary"
-            android:text="Due date and time" />
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/titleLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="What is to be done?"
+                android:textColor="@color/primary" />
 
             <EditText
-                android:id="@+id/dateEditTextView"
-                android:layout_width="0dp"
+                android:id="@+id/titleEditTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:layout_weight="1"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="5dp"
+                android:text="@{viewModel.title}"
                 android:ems="10" />
 
-            <ImageView
-                android:id="@+id/dateClearButton"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/dueDateTimeLabel"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tint="@color/white"
-                android:background="@drawable/circle_bg_shape"
-                android:src="@drawable/ic_close"/>
-        </LinearLayout>
+                android:layout_marginTop="5dp"
+                android:text="Due date and time"
+                android:textColor="@color/primary" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/timeEditTextView"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clickable="false"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:layout_weight="1"
-                android:ems="10" />
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/timeClearButton"
-                android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/dateEditTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:text="@{viewModel.date}"
+                    android:focusableInTouchMode="false" />
+
+                <ImageView
+                    android:id="@+id/dateClearButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle_bg_shape"
+                    android:src="@drawable/ic_close"
+                    app:tint="@color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tint="@color/white"
-                android:background="@drawable/circle_bg_shape"
-                android:src="@drawable/ic_close"/>
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/timeEditTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:text="@{viewModel.time}"
+                    android:focusableInTouchMode="false" />
+
+                <ImageView
+                    android:id="@+id/timeClearButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle_bg_shape"
+                    android:src="@drawable/ic_close"
+                    app:tint="@color/white" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</layout>
