--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/appBar"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
@@ -18,7 +19,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/appBar"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="30dp"
+             android:paddingBottom="100dp"
             android:layout_weight="1"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
