--- a/app/src/main/res/layout/fragment_task_holder.xml
+++ b/app/src/main/res/layout/fragment_task_holder.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="task"
+            type="com.tw.remainder.entities.TaskEntity" />
+
+        <variable
+            name="itemListener"
+            type="com.tw.remainder.fragments.TaskHolder.ItemClickListener"/>
+
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:padding="10dp"
     android:background="@drawable/task_shape"
+    android:onClick="@{() -> itemListener.onTaskClicked(task)}"
     android:layout_height="wrap_content">
 
     <CheckBox
@@ -35,3 +47,4 @@
         app:layout_constraintTop_toBottomOf="@+id/title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
