Add logic to change status of task in home screen

--- a/app/src/main/res/layout/fragment_task_holder.xml
+++ b/app/src/main/res/layout/fragment_task_holder.xml
@@ -26,6 +26,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="5dp"
         android:layout_width="30dp"
+        android:onClick="@{() -> itemListener.onCheckBoxClicked(task)}"
         android:layout_height="30dp"/>
 
     <TextView
